--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -34,7 +34,7 @@
                 <span class="site-emoji">{{ . | safeHTML }}</span>
             {{ end }}
             {{ with .Site.Title }}
-                <h1 class="site-name"><a href="{{ .Site.BaseURL | absLangURL }}">{{ . }}</a></h1>
+                <h1 class="site-name"><a href="{{ $.Site.BaseURL | absLangURL }}">{{ . }}</a></h1>
             {{ end }}
             {{ with .Site.Params.sidebar.subtitle }}
                 <p class="site-description">{{ . | safeHTML }}</p>
