--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -2,52 +2,119 @@
 
 {{ $sidebarMenu := .Site.Menus.sidebar }}
 {{ if or $sidebar.emoji $sidebar.subtitle $sidebar.avatar (gt (len $sidebarMenu) 0) }}
-<aside class="sidebar" id="sidebar">
-    <div class="sidebar-content">
-        <div class="site-info">
-            {{ with .Site.Params.sidebar.avatar }}
-                <figure class="site-avatar">
-                    {{ $avatarResource := false }}
-                    {{ if .local }}
-                        {{/* Local image processing */}}
-                        {{ $avatarResource = resources.Get (.src) }}
-                    {{ else }}
-                        {{/* Remote image fetching and processing */}}
-                        {{ $avatarResource = resources.GetRemote (.src) }}
-                    {{ end }}
+<aside class="sidebar left-sidebar sticky {{ if .Site.Params.sidebar.compact }}compact{{ end }}">
+    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="{{ T `toggleMenu` }}">
+        <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+        </span>
+    </button>
 
+    <header>
+        {{ with .Site.Params.sidebar.avatar }}
+            {{ if (default true .enabled) }}
+            <figure class="site-avatar">
+                <a href="{{ $.Site.BaseURL | relLangURL }}"> {{/* Use $ for top context */}}
+                {{ $avatarResource := false }}
+                {{ if .local }}
+                    {{/* Local image processing (unchanged from theme, but kept for completeness) */}}
+                    {{ $avatarResource = resources.Get (.src) }}
                     {{ if $avatarResource }}
-                        {{/* Apply 1:1 centered crop */}}
+                        {{ $avatarProcessed := $avatarResource.Resize "300x" }}
+                        <img src="{{ $avatarProcessed.RelPermalink }}" width="{{ $avatarProcessed.Width }}"
+                            height="{{ $avatarProcessed.Height }}" class="site-logo" loading="lazy" alt="Avatar">
+                    {{ else }}
+                         {{ errorf "Failed loading local avatar from %q" .src }}
+                    {{ end }}
+                {{ else }}
+                    {{/* Remote image fetching and processing */}}
+                    {{ $avatarResource = resources.GetRemote (.src) }}
+                    {{ if $avatarResource }}
+                         {{/* Apply 1:1 centered crop */}}
                         {{ $avatarProcessed := $avatarResource.Fill "300x300 Center" }}
                         <img src="{{ $avatarProcessed.RelPermalink }}" width="{{ $avatarProcessed.Width }}"
                             height="{{ $avatarProcessed.Height }}" class="site-logo" loading="lazy" alt="Avatar">
                     {{ else }}
-                        {{ errorf "Failed loading avatar from %q" .src }}
+                        {{ errorf "Failed loading remote avatar from %q" .src }}
                     {{ end }}
-
-                    {{ with $.Site.Params.sidebar.avatar_status }}
-                        <span class="avatar-status {{ . }}"></span>
-                    {{ end }}
-                </figure>
+                {{ end }}
+                </a>
+                {{ with $.Site.Params.sidebar.emoji }} {{/* Use $ for top context */}}
+                    <span class="emoji">{{ . }}</span>
+                {{ end }}
+            </figure>
             {{ end }}
-            {{ with .Site.Params.sidebar.emoji }}
-                <span class="site-emoji">{{ . | safeHTML }}</span>
-            {{ end }}
-            {{ with .Site.Title }}
-                <h1 class="site-name"><a href="{{ $.Site.BaseURL | absLangURL }}">{{ . }}</a></h1>
-            {{ end }}
-            {{ with .Site.Params.sidebar.subtitle }}
-                <p class="site-description">{{ . | safeHTML }}</p>
-            {{ end }}
-        </div>
-
-        {{ if gt (len $sidebarMenu) 0 }}
-            <nav class="nav sidebar-nav">
-                {{ partial "helper/menu" (dict "menu" $sidebarMenu "current" . "location" "sidebar") }}
-            </nav>
         {{ end }}
+        
+        <div class="site-meta">
+            <h1 class="site-name"><a href="{{ $.Site.BaseURL | relLangURL }}">{{ $.Site.Title }}</a></h1> {{/* Use $ for top context */}}
+            <h2 class="site-description">{{ $.Site.Params.sidebar.subtitle }}</h2> {{/* Use $ for top context */}}
+        </div>
+    </header>
 
-        {{- partial "sidebar/components/social_icons.html" . -}}
-    </div>
+    {{/* Social Menu Logic (copied directly from theme's correct version) */}}
+    {{- with .Site.Menus.social -}}
+        <ol class="menu-social">
+            {{ range . }}
+                <li>
+                    <a 
+                        href='{{ .URL }}'
+                        {{ if eq (default true .Params.newTab) true }}target="_blank"{{ end }}
+                        {{ with .Name }}title="{{ . }}"{{ end }}
+                        rel="me"
+                    >
+                        {{ $icon := default "link" .Params.Icon }}
+                        {{ with $icon }}
+                            {{ partial "helper/icon" . }}
+                        {{ end }}
+                    </a>
+                </li>
+            {{ end }}
+        </ol>
+    {{- end -}}
+
+    {{/* Main Menu Logic (copied directly from theme's correct version) */}}
+    <ol class="menu" id="main-menu">
+        {{ $currentPage := . }}
+        {{ range .Site.Menus.main }}
+        {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
+        <li {{ if $active }} class='current' {{ end }}>
+            <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
+                {{ $icon := default .Pre .Params.Icon }}
+                {{ if .Pre }}
+                    {{ warnf "Menu item [%s] is using [pre] field to set icon, please use [params.icon] instead.\nMore information: https://stack.jimmycai.com/config/menu" .URL }}
+                {{ end }}
+                {{ with $icon }}
+                    {{ partial "helper/icon" . }}
+                {{ end }}
+                <span>{{- .Name -}}</span>
+            </a>
+        </li>
+        {{ end }}
+        <li class="menu-bottom-section">
+            <ol class="menu">
+                {{- $currentLanguageCode := .Language.Lang -}}
+                {{ if ( compare.Gt .Site.Home.AllTranslations.Len 1 ) }}
+                    {{ with .Site.Home.AllTranslations }}
+                        <li id="i18n-switch">  
+                            {{ partial "helper/icon" "language" }}
+                            <select name="language" title="language" onchange="window.location.href = this.selectedOptions[0].value">
+                                {{ range . }}
+                                    <option value="{{ .Permalink }}" {{ if eq .Language.Lang $currentLanguageCode }}selected{{ end }}>{{ .Language.LanguageName }}</option>
+                                {{ end }}
+                            </select>
+                        </li>
+                    {{ end }}
+                {{ end }}
+
+                {{ if (default false .Site.Params.colorScheme.toggle) }}
+                    <li id="dark-mode-toggle">
+                        {{ partial "helper/icon" "toggle-left" }}
+                        {{ partial "helper/icon" "toggle-right" }}
+                        <span>{{ T "darkMode" }}</span>
+                    </li>
+                {{ end }}
+            </ol>
+        </li>
+    </ol>
 </aside>
 {{ end }} 
